--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
         "require-dev": {
                 "atk14/tester": "*",
                 "atk14/translate": "*",
-                "atk14/xmole": "*"
+                "atk14/xmole": "*",
+                "atk14/core": "dev-master",
+                "atk14/dates": "*"
         },
         "autoload": {
                 "files": ["src/functions.php"],
