--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ jobs:
         - sudo apt install software-properties-common
         - sudo add-apt-repository ppa:ondrej/php
         - sudo apt update
-        - sudo apt install php8.2 php8.2-mbstring
+        - sudo apt install php8.2 php8.2-mbstring php8.2-xml
         - php -v
         - composer update --dev
     - name: "PHP 8.3"
@@ -41,7 +41,7 @@ jobs:
         - sudo apt install software-properties-common
         - sudo add-apt-repository ppa:ondrej/php
         - sudo apt update
-        - sudo apt install php8.3 php8.3-mbstring
+        - sudo apt install php8.3 php8.3-mbstring php8.3-xml
         - php -v
         - composer update --dev
 
